service-mesh/custom-routing/1. weighted-routing-100-0/category-api/virtual-service.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: category-virtual-service
spec:
  hosts:
  - category-api-service.default.svc.cluster.local
  http:
  - route:
    - destination:
        host: category-api-service.default.svc.cluster.local
        subset: safe-subset
      weight: 100
    - destination:
        host: category-api-service.default.svc.cluster.local
        subset: risky-subset
      weight: 0
---
